[tool.poetry]
name = "duinobot"
version = "0.15-1"
description = "API en Python para el robot Multiplo N6"
authors = ["Fernando Lopez, Sofia Martin, Augusto Guerrero, Joaquin Bogado <soportelihuen@linti.unlp.edu.ar>"]
license = "Licencia Pacifista RobotGroup-Multiplo Pacifist License (RMPL)"
homepage = "http://robots.linti.unlp.edu.ar/"
repository = "https://github.com/Robots-Linti/duinobot"

[tool.poetry.dependencies]
python = "^3.9"
pyserial = "^3.5"
pygame = "^2.0.1"
pyFirmata = "^1.1.0"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
isort = "^5.9.2"
pytest = "^6.2.4"
pre-commit = "^2.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
